deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-app
  labels:
    application: shopping-app
spec:
  replicas: 1
  selector:
    matchLabels:
      application: shopping-app
  template:
    metadata:
      labels:
        application: shopping-app
    spec:
      containers:
      - name: main
        image: 59625962/shopping-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        #readinessProbe:
          #httpGet:
          #  path: /health
          #  port: 8080
        resources:
          requests:
            cpu: 5m
            memory: 25Mi
          limits:
            cpu: 5m
            memory: 25Mi
