service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-app
  labels:
    application: shopping-app
spec:
  selector:
    application: shopping-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
